# Capstone

./: README.md  drone_control.cpp  drone_control.py  drone_control_functions.py  drone_control_using_functions.py
Code/: Controls.cpp  Controls.h  Debug.cpp  Debug.h  Display.cpp  Display.h  GestAir.cpp  Imu.cpp  Imu.h
offboard_no_gps/: CMakeLists.txt  offboard_no_gps.cpp
offboard_no_gps_wasd/: CMakeLists.txt  arduino_mock_stream.cpp  drone_control.h  drone_glove_connection.cpp  offboard_no_gps_wasd.cpp  offboard_old.cpp
sketch_mar16a/: sketch_mar16a.ino
